<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Piggy Bank</string>
    <string name="title_welcome">Welcome to your piggy bank!</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="edit_userID">Enter userID</string>
    <string name="edit_password">Enter password</string>
    <string name="description_image_welcome">this is an welcome image</string>
    <string name="team_name"> ( ͡° ͜ʖ ͡° ) </string>
    <string name="button_createAccount">Don\'t have an account? Click here!</string>
    <string name="button_goToLogin">Already have an account? Click here!</string>
    <color name="blue">#00FFFF</color>
    
    
</resources>
